--- a/podcast/pages/main.html
+++ b/podcast/pages/main.html
@@ -72,7 +72,7 @@ text-align:center;
 
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
+<li><a href="main.html">Home</a></li>
 <li><a href="About.html">About</a></li>
 <li><a href="Contact.Html">Podcasts</a></li>
 <li><a href="#">Services</a></li>
