--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" type="image/x-icon" href="images\logo.png" />
+<link rel="shortcut icon" type="image/x-icon" href="podcast\pages\images\logo.png" />
 <head>
 <title>Perfect Podcast-Main Page</title>
 <style>
@@ -82,7 +82,7 @@ text-align:center;
 </header>
 
 <div class="banner">
-<img src="images\musicnote.jpg" alt>
+<img src="podcast\pages\images\musicnote.jpg" alt>
 </div>
 
 <div class="content">
